# godot-wry-playwright

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  playwright-cli.md
.github/workflows/: build-windows.yml
crates/godot_wry_playwright/: Cargo.toml
crates/godot_wry_playwright/src/: lib.rs  pending.rs  wry_browser.rs  wry_texture_browser.rs
crates/godot_wry_playwright/tests/: pending_requests_test.rs
crates/godot_wry_playwright_core/: Cargo.toml
docs/plan/: v1-index.md  v1-windows-mvp.md  v2-computer-scene-integration.md  v2-demo-canonicalization.md  v2-index.md  v2-texture-mode.md  v3-api-surface-and-contract.md  v3-capture-storage-tabs.md  v3-cli-command-catalog.md  v3-core-navigation-input.md  v3-index.md  v3-migration-and-ux.md  v3-network-devtools-session-runtime.md  v4-demo-migration-runtime.md  v4-index.md  v4-legacy-deprecation-gates.md  v4-single-surface-architecture.md
docs/prd/: 2026-02-05-godot-wry-playwright.md  (+2 more)
godot-wry-playwright/: .gitignore  Computer.glb.import  Computer_Computer Texture.png.import  icon.svg.import  project.godot
proxy/: README.md
scripts/: build_windows_wsl.sh  check_playwright_cli_command_map.py  check_texture3d_scene_requirements.py  check_v3_capture_storage_tabs_contract.py  check_v3_core_api_surface.py  check_v3_core_m31_behavior_contract.py  check_v3_core_m31_slice2.py  check_v3_core_m31_slice3.py  check_v3_runtime_test_coverage.py  check_v4_legacy_surface_refs.py  check_v4_runtime_coverage.py  check_v4_single_surface_usage.py  copy_bins.ps1  run_godot_tests.ps1  run_tests.ps1
(+74 files in other folders)
